<resources>
    <string name="app_name">Invoice</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="items">Items</string>
    <string name="items_description">Items Description</string>
    <string name="selling_price">Price</string>
    <string name="price_per_item">Price Per Item</string>
    <string name="quantity">Quantity</string>

    <string name="add_item_to_bill">Add item</string>
    <string name="download">Download</string>
    <string name="gstin_number">GSTIN Number</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="set_shop_details">Set Shop Details</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="mobile_no1">Mobile No</string>
    <string name="mobile_no2">Alternative Mobile No (Optional)</string>
    <string name="clear_items">Clear Items</string>
    <string name="next">Next</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="cgst">CGST%</string>
    <string name="sgst">SGST%</string>
    <string name="item_details">Item Details</string>
    <string name="item_name">Item Name</string>
    <string name="grand_total">Grand Total:</string>
    <string name="discount">Discount%</string>
    <string name="garments">Garments</string>
    <string name="under_garments">Under Garments</string>
    <string name="size">Size</string>
    <string name="add_items">Add Items</string>
    <string name="itemsize">itemsize</string>
    <string name="quantity_rate">Quantity*rate</string>
    <string name="subtotal">Subtotal</string>
    <string name="tdiscount">Tdiscount</string>
    <string name="ttotal">Ttotal</string>
    <string name="total">Total</string>
    <string name="update">Update</string>
    <string name="shop_details">Shop Details</string>
    <string name="gst">GST :</string>
    <string name="shop_name1">Shop Name :</string>
    <string name="shop_address1">Shop Address :</string>
    <string name="mobile1">Mobile :</string>
    <string name="customer_details">Customer Details</string>
    <string name="name">Name :</string>
    <string name="address1">Address :</string>
    <string name="share">Share</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="shop_icon">Shop Icon (Optional)</string>
    <string name="shop_icon1">Shop Icon</string>
    <string name="change_logo">Change Logo</string>
    <string name="delete_logo">Delete logo</string>


    <string-array name="state">
        <item>-Select State-</item>
        <item>Andaman and Nicobar</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattishgarh</item>
        <item>Dadra and N. Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujrat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghayala</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orrisa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>

    <string-array name="select_sze">
        <item>-Select Size-</item>
        <item>Number</item>
        <item>Roman</item>

    </string-array>

</resources>