<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/itemname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/item_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/itemsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_toEndOf="@id/itemname"
        android:gravity="end"
        android:text="@string/itemsize"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/quantity_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemname"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/quantity_rate"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemsize"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:text="@string/subtotal"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/discountlinearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtotal"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:text="@string/discount"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:text="@string/tdiscount" />

    </LinearLayout>


    <TextView
        android:id="@+id/border1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/discountlinearlayout"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_150sdp"
        android:layout_marginEnd="15dp"
        android:background="#808080" />

    <LinearLayout
        android:id="@+id/subtotalLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/border1"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_60sdp"
            android:text="@string/total"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:text="@string/ttotal"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/subtotalLinearLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_150sdp"
        android:layout_marginEnd="15dp"
        android:background="#808080" />

    <TextView
        android:id="@+id/border3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/border2"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="#070707"/>


</RelativeLayout>

